[package]
name = "bevy_animation"
version = "0.7.0"
edition = "2021"
description = "Provides animation functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = "0.7.0"
bevy_asset = "0.7.0"
bevy_core = "0.7.0"
bevy_math = "0.7.0"
bevy_reflect = { version = "0.7.0", features = ["bevy"] }
bevy_utils = "0.7.0"
bevy_ecs = "0.7.0"
bevy_transform = "0.7.0"
bevy_hierarchy = "0.7.0"
