[package]
name = "libre_pvz"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/ruifengx/librePvZ.git"
homepage = "https://github.com/ruifengx/librePvZ/tree/main/libre_pvz"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ game logic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["render", "png", "bevy_winit"], default-features = false }
egui = "0.18.1"
bevy_egui = "0.14.0"
# bevy-inspector-egui = "0.11.0"
bevy_prototype_lyon = "0.5.0"
libre_pvz_resources = { path = "../libre_pvz_resources", features = ["bevy"] }
libre_pvz_animation = { path = "../libre_pvz_animation" }
