[package]
name = "libre_pvz"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/libre_pvz"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ game logic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
bevy_egui = "0.15.0"
# bevy-inspector-egui = "0.11.0"
bevy_prototype_lyon = "0.6.0"
derivative = "2.2.0"
libre_pvz_resources = { path = "../libre_pvz_resources" }
libre_pvz_animation = { path = "../libre_pvz_animation" }

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = ["render", "png", "jpeg", "bevy_winit", "x11"]
