[package]
name = "libre_pvz"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/libre_pvz"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ game logic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
bevy = { version = "0.10.0", features = ["jpeg"] }
bevy_egui = "0.20.0"
bevy-inspector-egui = "0.18.0"
bevy_prototype_lyon = "0.8.0"
bevy_asset_loader = { version = "0.15.0", features = ["2d"] }
derivative = "2.2.0"
libre_pvz_resources = { path = "../libre_pvz_resources" }
libre_pvz_animation = { path = "../libre_pvz_animation" }
# below are dependencies already pulled in by bevy
anyhow = "1.0.69"
