[package]
name = "libre_pvz_animation"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/ruifengx/librePvZ.git"
homepage = "https://github.com/ruifengx/librePvZ/tree/main/libre_pvz_animations"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ animation in Bevy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", default-features = false }
thiserror = "1.0.30"
derivative = "2.2.0"
bitvec = "1.0.0"
optics = { path = "../optics" }
