[package]
name = "libre_pvz_animation"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/libre_pvz_animations"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ animation in Bevy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
derivative = "2.2.0"
delegate = "0.9.0"
itertools = "0.10.5"
bitvec = "1.0.1"
optics = { path = "../optics" }

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = ["bevy_sprite", "bevy_asset"]
