[package]
name = "libre_pvz_resources"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/libre_pvz_resources"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ game resource management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.1", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
bevy = { version = "0.7", default-features = false, features = ["render"], optional = true }
bitvec = { version = "1.0.0", optional = true }
once_cell = { version = "1.10.0", optional = true }
optics = { path = "../optics", optional = true }
libre_pvz_animation = { path = "../libre_pvz_animation", optional = true }
# below are dependencies already pulled in by bevy
anyhow = "1.0.55"
parking_lot = "0.11.2"

[features]
bevy = [
    "dep:bevy", "dep:libre_pvz_animation",
    "dep:bitvec", "dep:optics", "dep:once_cell",
    "dep:serde_json", "dep:serde_yaml",
]
