[package]
name = "libre_pvz_resources"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/libre_pvz_resources"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "librePvZ game resource management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
bincode = { version = "2.0.0-rc.2", features = ["derive"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
bitvec = "1.0.1"
itertools = "0.10.5"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
optics = { path = "../optics" }
libre_pvz_animation = { path = "../libre_pvz_animation" }
# below are dependencies already pulled in by bevy
anyhow = "1.0.69"
parking_lot = "0.12.1"

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = ["bevy_render", "bevy_sprite", "bevy_asset"]
