[package]
name = "optics"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/ruifengx/librePvZ.git"
homepage = "https://github.com/ruifengx/librePvZ/tree/main/optics"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "yet another Haskell optics in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
