[package]
name = "reanim-decode"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/reanim-decode"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "decoder for PvZ reanim files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
thiserror = "1.0.38"
flate2 = "1.0.25"
libre_pvz_resources = { path = "../libre_pvz_resources" }
binrw = "0.11.1"
bincode = "2.0.0-rc.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
serde_json = "1.0.93"
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }
clap = { version = "4.1.8", optional = true, features = ["derive"] }
anyhow = { version = "1.0.69", optional = true }

[features]
cli = ["dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:anyhow"]

[[bin]]
name = "reanim-decode"
required-features = ["cli"]
