[package]
name = "reanim-decode"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/reanim-decode"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "decoder for PvZ reanim files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
thiserror = "1.0.40"
flate2 = "1.0.25"
libre_pvz_resources = { path = "../libre_pvz_resources" }
bincode = "2.0.0-rc.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", optional = true }
clap = { version = "4.1.13", optional = true, features = ["derive"] }
anyhow = { version = "1.0.70", optional = true }

[features]
cli = ["dep:tracing-subscriber", "dep:clap", "dep:anyhow"]

[[bin]]
name = "reanim-decode"
required-features = ["cli"]
