[package]
name = "reanim-decode"
version = "0.1.0"
edition = "2021"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
repository = "https://github.com/librePvZ/librePvZ.git"
homepage = "https://github.com/librePvZ/librePvZ/tree/main/reanim-decode"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "decoder for PvZ reanim files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13"
thiserror = "1.0.56"
flate2 = "1.0.28"
libre_pvz_resources = { path = "../libre_pvz_resources" }
# https://github.com/bincode-org/bincode/issues/646, TODO: let's wait for the new release
bincode = "=2.0.0-rc.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", optional = true }
clap = { version = "4.5.0", optional = true, features = ["derive"] }
anyhow = { version = "1.0.79", optional = true }

[features]
cli = ["dep:tracing-subscriber", "dep:clap", "dep:anyhow"]

[[bin]]
name = "reanim-decode"
required-features = ["cli"]
